feat: 文章定时发布

--- a/rjsoft-web/src/main/resources/templates/henan/article.html
+++ b/rjsoft-web/src/main/resources/templates/henan/article.html
@@ -2,21 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <meta name="SiteName" content="河南省司法厅">
-    <meta name="SiteDomain" content="sft.henan.gov.cn">
-    <meta name="ColumnName" content="司法厅">
-    <meta name="ColumnType" content="司法厅">
-    <meta name="ArticleTitle" content="邬勇雷赴三明市调研指导基层司法行政工作">
-    <meta name="PubDate" content="2021-03-15 12:02">
-    <meta name="ContentSource" content="厅办公室">
     <meta name="KeyWords" content="">
     <meta name="Author" content="">
     <meta name="Desctiption" content="">
     <meta name="Image" content="http://sft.fujian.gov.cn/zwgk/ywbd/sft/202103/W020210315437742908269.jpg">
     <meta name="Url" content="http://sft.fujian.gov.cn/zwgk/ywbd/sft/202103/t20210315_5548761.htm">
-    <title>
-        邬勇雷赴三明市调研指导基层司法行政工作_司法厅_福建省司法厅
-    </title>
+    <title th:text="${article.articleTitle}"></title>
     <link href="/css/sft_ou.css" rel="stylesheet" type="text/css">
     <link href="/css/sft_golbal.css" rel="stylesheet" type="text/css">
     <link href="/css/hnsf.css" rel="stylesheet" type="text/css">
